unified_tests/control_flow/if_condition_incomplete_comparison/expect/build.text.stderr
lib.copp:2:13: error: expected expression
      if 1 <= {
              ^
